<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nav_header_background"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


    <!-- 뽀삐 사진 -->
    <ImageView
        android:id="@+id/img_nave_header_main_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:paddingTop="16dp"
        android:src="@drawable/ic_launcher_foreground" />

    <!-- 이름 -->
    <TextView
        android:id="@+id/txt_nav_header_main_name"
        style="@style/regularNavyStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/nav_header_dog_name_background"
        android:paddingVertical="4dp"
        android:paddingLeft="8dp"
        android:text="@string/nav_dog_name"
        android:textSize="14.5sp" />

    <!-- 병원 위치 -->
    <TextView
        android:id="@+id/txt_nav_header_main_home"
        style="@style/lightNavyStyle"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="83.8dp"
        android:padding="10dp"
        android:text="@string/nav_home"
        android:textSize="14.5sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/colorNavy" />

    <!-- 병원 위치 -->
    <TextView
        android:id="@+id/txt_nav_header_main_hospital"
        style="@style/lightNavyStyle"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="56dp"
        android:padding="10dp"
        android:text="@string/nav_hospital_location"
        android:textSize="14.5sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/colorNavy" />

    <!-- 사료 추천 -->
    <TextView
        android:id="@+id/txt_nav_header_main_recommend"
        style="@style/lightNavyStyle"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="56dp"
        android:padding="10dp"
        android:text="@string/nav_recommend"
        android:textSize="14.5sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/colorNavy" />

    </LinearLayout>


    <Button
        android:text="@string/nav_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_border_navy"
        android:layout_alignParentBottom="true"
        style="@style/regularWhiteStyle"/>
</RelativeLayout>
